--- a/res/layout/list_dynamic.xml
+++ b/res/layout/list_dynamic.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:id="@+id/list_dynamic_layout_head_portrait"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
@@ -45,7 +45,6 @@
                 android:id="@+id/list_dynamic_text_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1分钟前"
                 android:textSize="10sp" />
         </LinearLayout>
     </LinearLayout>
@@ -129,7 +128,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
-                android:text="1"
                 android:textColor="@color/main_text"
                 android:textSize="11sp" />
         </LinearLayout>
