--- a/res/layout/list_head_thumb_up_for_details.xml
+++ b/res/layout/list_head_thumb_up_for_details.xml
@@ -6,12 +6,14 @@
     android:orientation="vertical" >
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:id="@+id/list_head_thumb_up_linear_head"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:orientation="horizontal"
-        android:paddingBottom="3dp" >
+        android:paddingBottom="3dp"
+        android:paddingRight="10dp" >
 
         <!-- 头像 -->
 
