--- a/res/layout/friend_message_frame_main.xml
+++ b/res/layout/friend_message_frame_main.xml
@@ -55,18 +55,6 @@
         android:id="@+id/friend_message_frame_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="gone"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_weight="1"
-        android:divider="@null"
-        android:dividerHeight="5dp"
-        android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll" />
-    <ListView
-        android:id="@+id/friend_message_frame_listview1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
@@ -97,22 +85,23 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"      
+            android:layout_marginStart="5dp"
             android:layout_weight="1"
             android:background="@drawable/shape_share_end"
             android:cursorVisible="false" />
+
         <com.yuanchuang.yohey.tools.AudioRecordButton
             android:id="@+id/recordButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-             android:visibility="gone"
             android:background="@drawable/button_recordnormal"
             android:gravity="center"
             android:minHeight="0dp"
             android:padding="5dp"
             android:text="按住 说话"
-            android:textColor="#727272" />
+            android:textColor="#727272"
+            android:visibility="gone" />
 
         <ImageView
             android:layout_width="wrap_content"
