--- a/res/layout/child.xml
+++ b/res/layout/child.xml
@@ -11,12 +11,12 @@
         android:layout_height="40dp"
         android:layout_marginLeft="21dp"
         android:layout_marginStart="21dp"
-        android:src="@drawable/yp_hey_background_image"/>
+        android:src="@drawable/yp_hey_background_image" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/tv_childname"
@@ -26,37 +26,40 @@
             android:layout_marginStart="22dp"
             android:text="赵日天"
             android:textColor="#343434"
-            android:textSize="15sp"/>
-        <LinearLayout 
+            android:textSize="15sp" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-               android:id="@+id/tv_sign"
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"
-               android:layout_weight="1"
-               android:layout_marginLeft="22dp"
-               android:layout_marginStart="22dp"
-               android:text="每把超神服不服"
-               android:textColor="#888888"
-               android:textSize="13sp" />
+            android:orientation="horizontal" >
 
-           <TextView
-               android:id="@+id/tv_status"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginRight="21dp"
-               android:layout_marginEnd="21dp"
-               android:text="游戏在线"
-               android:textColor="#888888"
-               android:textSize="13sp"  />
-        </LinearLayout> 
-        <View 
+            <TextView
+                android:id="@+id/tv_sign"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="22dp"
+                android:layout_marginStart="22dp"
+                android:layout_weight="1"
+                android:text="每把超神服不服"
+                android:textColor="#888888"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/tv_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="21dp"
+                android:layout_marginRight="21dp"
+                android:text="游戏在线"
+                android:textColor="#888888"
+                android:textSize="13sp" />
+        </LinearLayout>
+
+        <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:background="#DADBDD"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:background="#DADBDD" />
     </LinearLayout>
 
 </LinearLayout>
