--- a/res/layout/message_listview.xml
+++ b/res/layout/message_listview.xml
@@ -30,7 +30,7 @@
                 android:layout_marginLeft="21dp"
                 android:layout_marginStart="21dp"
                 android:layout_weight="1"
-                android:text="赵日天"
+                android:text=""
                 android:textColor="#343434"
                 android:textSize="14sp" />
 
@@ -62,6 +62,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/tv_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
