清理缓存功能的成功实现

--- a/res/layout/activity_yue_lu_system_settings.xml
+++ b/res/layout/activity_yue_lu_system_settings.xml
@@ -177,7 +177,7 @@
                 android:id="@+id/system_settings_text_clear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="300M"
+                android:text=""
                 android:textColor="@color/main_text"
                 android:textSize="12sp" />
 
