改变分享的完成

--- a/res/layout/activity_image_grid.xml
+++ b/res/layout/activity_image_grid.xml
@@ -15,7 +15,8 @@
         <GridView
             android:id="@+id/gridview"
             android:layout_width="match_parent"
-            android:layout_height="490dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_margin="8dp"
             android:horizontalSpacing="8dp"
             android:numColumns="3"
@@ -25,7 +26,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <TextView
@@ -36,7 +37,7 @@
             <Button
                 android:id="@+id/bt"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/bt_nobgd"
                 android:text="完成"
                 android:textColor="#ff495a"
